--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,14 @@
 services:
   - type: web
     name: vet-clinic-ai-chatbot
-    env: python
+    runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn server:app --host 0.0.0.0 --port $PORT
+    startCommand: gunicorn server:app
+    plan: free
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
       - key: SECRET_KEY
         generateValue: true
       - key: OPENAI_API_KEY
-        sync: false  # You'll need to set this manually in Render dashboard
+        sync: false
