Fix OpenAI SDK compatibility issues and deployment errors
- Updated OpenAI SDK to version 1.51.2 for better compatibility
- Added httpx version pinning to prevent proxy argument conflicts
- Added robust error handling for OpenAI client initialization
- Implemented fallback responses when OpenAI API is unavailable
- Updated render.yaml with explicit pip upgrade and port binding
- Added FLASK_ENV=production environment variable
- Fixed TypeError: Client.__init__() got unexpected keyword argument 'proxies'

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: vet-clinic-ai-chatbot
     runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn server:app
+    buildCommand: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: gunicorn server:app --bind 0.0.0.0:$PORT
     plan: free
     envVars:
       - key: PYTHON_VERSION
@@ -12,3 +14,5 @@ services:
         generateValue: true
       - key: OPENAI_API_KEY
         sync: false
+      - key: FLASK_ENV
+        value: production
