Comprehensive deployment fixes for Python version and gunicorn issues
- Updated gunicorn to version 21.2.0 to fix pkg_resources deprecation warning
- Added setuptools>=65.0.0 to requirements.txt for compatibility
- Created gunicorn.conf.py with proper Render-specific configuration
- Added .python-version file to force Python 3.11.9 usage
- Updated render.yaml to use python3.11 explicitly in build command
- Added start.sh script with database initialization
- Updated Procfile to use new gunicorn configuration
- Fixed: Render using Python 3.13 instead of 3.11
- Fixed: pkg_resources deprecation warning
- Fixed: gunicorn startup and binding issues

--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: vet-clinic-ai-chatbot
     runtime: python
     buildCommand: |
-      python -m pip install --upgrade pip
+      python3.11 -m pip install --upgrade pip setuptools wheel
       pip install -r requirements.txt
-    startCommand: gunicorn server:app --bind 0.0.0.0:$PORT
+    startCommand: python -m gunicorn server:app -c gunicorn.conf.py
     plan: free
     envVars:
       - key: PYTHON_VERSION
