Complete PostgreSQL migration and Render.com deployment setup
- Migrated from SQLite to PostgreSQL/Supabase
- Added performance optimizations (caching, quick responses, faster models)
- Created comprehensive deployment package for Render.com
- Added migration guides and documentation
- Updated all configuration files for production deployment

--- a/render.yaml
+++ b/render.yaml
@@ -16,3 +16,19 @@ services:
         sync: false
       - key: FLASK_ENV
         value: production
+      - key: DATABASE_URL
+        sync: false
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_ANON_KEY
+        sync: false
+      - key: SUPABASE_SERVICE_ROLE_KEY
+        sync: false
+      - key: TWILIO_ACCOUNT_SID
+        sync: false
+      - key: TWILIO_AUTH_TOKEN
+        sync: false
+      - key: TWILIO_WHATSAPP_NUMBER
+        sync: false
+      - key: ADMIN_WHATSAPP_NUMBER
+        sync: false
