--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 flask==3.0.3
 flask-cors==4.0.1
+flask-sqlalchemy==3.1.1
 python-dotenv==1.0.1
 openai==1.51.2
 httpx==0.27.0
@@ -7,4 +8,6 @@ bcrypt==4.1.3
 twilio==9.2.0
 requests==2.32.3
 gunicorn==21.2.0
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
 setuptools>=65.0.0
